# quotemp

./: Cargo.toml  build.rs
src/: lib.rs  main.rs  template.rs
templates/: layout.html
