[package]
name = "quotemp"
version = "0.1.0"
edition = "2021"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
regex = "1.9.4"
proc-macro2 = "1.0"

[build-dependencies]
regex = "1.9.4"

[lib]
proc-macro = true
